# build-failed1

./: .gitignore  Cargo.toml  README  openocd.cfg
.cargo/: config.toml
common/: Cargo.toml  README
common/src/: lib.rs
defmt-gdb/: .gitignore  Cargo.toml
defmt-gdb/src/: lib.rs
defmt-gdb/tests/: test.rs
rpi4/: Cargo.toml
rpi4/src/: lib.rs
stmf103/: Cargo.toml  build.rs  memory.x
stmf103/src/: lib.rs
stmf103/testsuite/: Cargo.toml
stmf103/testsuite/tests/: test.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
