[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# emboss is not no-std and is causing problems with the no-std packages..
[dependencies]
#emboss = "*"

#[build-dependencies]
#vergen = "*"



